- authentication improvement & image view endpoint
